# acronis_differentiator

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
TexCaller/: CMakeLists.txt  Makefile  TexCaller.cbp  cmake_install.cmake  hello.tex  texcaller.c  texcaller.h
src/Differenctiator/: Differentiator.cpp  Differentiator.h
src/List/: List.cpp  List.h
src/Parser/: Parser.cpp  Parser.h
src/String/: String.cpp
src/Tree/: Tree.cpp  Tree.h
src/UnorderedMap/: UnorderedMap.cpp  UnorderedMap.h
src/UnorderedSet/: UnorderedSet.cpp  UnorderedSet.h
src/Vector/: Vector.cpp  Vector.h
stdin_stdout/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  DifferentiatorTests.cpp  Helper.cpp  Helper.h  ListTests.cpp  MapTests.cpp  VectorTests.cpp
tests/gtest/: googletest-distribution.cbp
tests/gtest/googlemock/: gmock.cbp
tests/gtest/googletest/: gtest.cbp
